# crewai-plasmate

./: README.md  pyproject.toml
crewai_plasmate/: __init__.py  tools.py
tests/: test_tools.py
