[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crewai-plasmate"
version = "0.1.0"
description = "Plasmate web browsing tool for CrewAI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Plasmate Labs" }]
keywords = ["crewai", "plasmate", "web", "browsing", "ai", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "crewai-tools>=0.17.0",
    "plasmate>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/plasmate-labs/crewai-plasmate"
Documentation = "https://plasmate.dev"
Repository = "https://github.com/plasmate-labs/crewai-plasmate"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
